<resources>
    <string name="app_name">Lunar</string>
    <string name="menu_drawer_activity">Dashboard</string>
    <string name="menu_drawer_alarm">Alarm</string>
    <string name="menu_drawer_hometime">Home Time</string>
    <string name="menu_drawer_sleep">Sleep</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="choose_activity_title_choose_city_tv">Choose a City</string>
    <string name="provider_file_string" translatable="false">com.med.lunar.fileprovider</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="time_able_morning">am</string>
    <string name="time_able_afternoon">pm</string>
    <string name="ble_not_supported">Smartphone does not support BLE</string>
    <string name="ble_deactivated">Bluetooth is turned off, please turn the bluetooth on to make connection.</string>
    <string name="ble_unstable">Bluetooth connection is unstable, please keep the watch closer to the phone.</string>
    <string name="ble_connect_timeout">If connected to the internet, press Help button for solutions</string>
    <string name="ble_notification_title">Notification</string>
    <string name="ble_notification_message">Lunar is not paired, please pair first</string>
    <string name="ble_command_timeout_title">Bluetooth communication timeout</string>
    <string name="ble_connect_timeout_url">https://nevowatch.freshdesk.com/solution/categories/5000086192/folders/5000257648/articles/5000619809-if-you-are-experiencing-intermittent-bluetooth-disconnection-problems-on-android</string>
    <string name="ble_connection_timeout_title">Bluetooth connection timeout</string>
    <string name="ble_connection_timeout_cancel">Cancel</string>
    <string name="ble_connection_timeout_help">Help</string>
    <string name="edit_user_first_name"> Click to set your first name</string>
    <string name="edit_user_last_name">Click to set your last name</string>
    <string name="notification_call_title">Call</string>
    <string name="notification_sms_title">SMS</string>
    <string name="notification_email_title">Email</string>
    <string name="notification_facebook_title">Facebook</string>
    <string name="notification_calendar_title">Calendar</string>
    <string name="notification_wechat_title">WeChat</string>
    <string name="notification_whatsapp_title">WhatsApp</string>
    <string name="location_access_title">This app needs location access</string>
    <string name="dfu_update">Update</string>
    <string name="dfu_back_to_settings">Back to settings</string>
    <string name="dfu_retry">Retry</string>
    <string name="dfu_update_title">Do not exit this screen</string>
    <string name="dfu_update_content">Please follow the instructions and wait until the update has been finished.</string>
    <string name="dfu_update_positive">Update</string>
    <string name="dfu_update_negative">Cancel</string>
    <string name="dfu_update_prepare">Prepare for update&#8230;</string>
    <string name="dfu_firmware_updated">Firmware updated</string>
    <string name="dfu_continue">Continue</string>
    <string name="dfu_back">Back</string>
    <string name="dfu_press_third_button">Press the third button</string>
    <string name="dfu_press_third_button_description">Don’t exit this screen while reactivating your bluetooth!</string>
    <string name="dfu_failed_preparing">Failed to prepare the update, please restart the BT of lunar or reinstall battery.</string>
    <string name="dfu_re_upgrade">Try again</string>
    <string name="dfu_continue_button">Continue</string>
    <string name="dfu_connect_error_no_nevo_do_ota">lunar isn\'t connected, can\'t perform OTA update</string>
    <string name="dfu_checking_firmware">Checking firmware version, please wait&#8230;</string>
    <string name="dfu_error_lowbattery">Not enough battery to upgrade.</string>
    <string name="dfu_error_timeout">Connection timed out</string>
    <string name="dfu_error_noconnect">No lunar connected</string>
    <string name="dfu_error_openfile">Open Firmware file error.</string>
    <string name="dfu_error_checksum">Checksum error.</string>
    <string name="dfu_error_nofounDFUservice">No OTA service found, please wait for few minutes and try again.</string>
    <string name="dfu_error_other">Couldn\'t update due to an error.</string>
    <string name="dfu_update_message">Updating&#8230;</string>
    <string name="dfu_update_available">An update is available for your watch.</string>
    <string name="notification_allow">Allow Notifications</string>
    <string name="notification">Notification</string>
    <string name="notification_led_red">Red LED</string>
    <string name="notification_led_blue">Blue LED</string>
    <string name="notification_led_light_green">Light green LED</string>
    <string name="notification_led_yellow">Yellow LED</string>
    <string name="notification_led_orange">Orange LED</string>
    <string name="notification_led_green">Green LED</string>
    <string name="notification_position">Position</string>
    <string name="notification_ok">OK</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_deactivated">Deactivated</string>
    <string name="notification_access_title">Notification Access</string>
    <string name="notification_connect_title">Nevo connected</string>
    <string name="notification_connect_content">your Nevo has got connected</string>
    <string name="notification_disconnect_title">Nevo disconnect</string>
    <string name="notification_disconnect_content">your Nevo has got disconnect</string>
    <string name="tutorial_1_title">Let\'s get started!</string>
    <string name="tutorial_2_title">Turn on Bluetooth</string>
    <string name="tutorial_2_dialog_negative">Settings</string>
    <string name="tutorial_2_dialog_positive">Turn on Bluetooth in the settings to connect with lunar</string>
    <string name="tutorial_3_title">Set time</string>
    <string name="tutorial_3_next">Next</string>
    <string name="tutorial_4_next">Next</string>
    <string name="tutorial_5_text">Keep lunar close to your phone</string>
    <string name="tutorial_failed_title">Cannot connect</string>
    <string name="tutorial_failed_try_again">Try Again</string>
    <string name="tutorial_success_title">Connected</string>
    <string name="tutorial_success_tap_to_continue">Tap to continue</string>
    <string name="sleep_sleep_duration">Sleep duration</string>
    <string name="sleep_sleep_time">Sleep time</string>
    <string name="sleep_wake_time">Wake time</string>
    <string name="sleep_deep_sleep">Deep sleep</string>
    <string name="sleep_time">Time</string>
    <string name="sleep_light_sleep">Light sleep</string>
    <string name="sleep_awake">Awake</string>
    <string name="sleep_wake_duration">Wake duration</string>
    <string name="sleep_today_no_sleep_message">You didn\'t sleep with your lunar.</string>
    <string name="sleep_select_date">select a date</string>
    <string name="steps_goal_title">Goal</string>
    <string name="steps_goal">goal</string>
    <string name="steps_progress">progress</string>
    <string name="steps_steps">steps</string>
    <string name="startup_goal_light">Light</string>
    <string name="startup_goal_moderate">Moderate</string>
    <string name="startup_goal_heavy">Heavy</string>
    <string name="startup_goal_weekly_days">Weekly days</string>
    <string name="startup_goal_weekend">Weekend</string>
    <string name="alarm_add">Add alarm</string>
    <string name="alarm_saved">Saved alarm!</string>
    <string name="alarm_could_not_save">Could not save alarm!</string>
    <string name="alarm_edit">Edit Alarm</string>
    <string name="alarm_label_alarm">Label your alarm.</string>
    <string name="alarm_label">label name</string>
    <string name="alarm_week_day">Repeat time</string>
    <string name="alarm_cancel">Cancel</string>
    <string name="alarm_deleted">Deleted alarm!</string>
    <string name="alarm_could_not_delete">Failed to delete alarm</string>
    <string name="alarm_could_not_change">Failed to change alarm</string>
    <string name="alarm_delete">Delete Alarm</string>
    <string name="alarm_set_different_time">Set a different time</string>
    <string name="alarm_set_label_for_alarm">Set label for alarm</string>
    <string name="alarm_set_week_day">Set weekday for alarm</string>
    <string name="alarm_set_week_day_dialog_text">Set the alarm clock to repeat time</string>
    <string name="alarm_synced">Alarm Synced</string>
    <string name="alarm_error_sync">Error Syncing Alarm</string>
    <string name="goal_syncing_message">Syncing Goal&#8230;</string>
    <string name="goal_synced">Goal Synced</string>
    <string name="goal_error_sync">Error Syncing Goal</string>
    <string name="goal">Goal</string>
    <string name="goal_ok">OK</string>
    <string name="goal_cancel">Cancel</string>
    <string name="goal_add">Add Goal</string>
    <string name="goal_saved">Saved goal!</string>
    <string name="goal_step_goal">step goal</string>
    <string name="goal_name_goal">goal name</string>
    <string name="goal_could_not_save">Could not save goal!</string>
    <string name="goal_edit">Edit Goal</string>
    <string name="goal_input">Set your goal</string>
    <string name="goal_label_goal">Label your goal</string>
    <string name="goal_label">label name</string>
    <string name="goal_deleted">Deleted goal!</string>
    <string name="goal_could_not_delete">Failed to delete goal</string>
    <string name="goal_could_not_change">Failed to change goal</string>
    <string name="goal_delete">Delete Goal</string>
    <string name="in_app_notification_bluetooth_disabled">Bluetooth is disabled. Enable Bluetooth.</string>
    <string name="in_app_notification_syncing">Syncing Data&#8230;</string>
    <string name="in_app_notification_syncing_alarm">Syncing Alarm&#8230;</string>
    <string name="in_app_notification_synced">Syncing data finished!</string>
    <string name="in_app_notification_no_watch">No watch connected.</string>
    <string name="in_app_notification_max_fourteen_alarm">Lunar supports only fourteen alarms.</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_my_nevo">My Lunar</string>
    <string name="title_about">About</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_nevo_firmware">Firmware</string>
    <string name="my_nevo_new_version">New version available</string>
    <string name="my_nevo_battery">Battery</string>
    <string name="my_nevo_battery_low">Battery Low</string>
    <string name="my_nevo_battery_half">Battery Sufficient</string>
    <string name="my_nevo_battery_full">Battery Full</string>
    <string name="my_nevo_application">Application</string>
    <string name="settings_link_loss_notification">Link loss notification</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_active_title">Active Notifications</string>
    <string name="settings_notifications_inactive_title">Inactive Notifications</string>
    <string name="settings_find_my_watch">Find my watch</string>
    <string name="settings_goals">Goals</string>
    <string name="settings_more">More Settings</string>
    <string name="settings_support">Support</string>
    <string name="settings_about">About</string>
    <string name="settings_forget_watch">Forget watch</string>
    <string name="settings_sure">Are you sure?</string>
    <string name="settings_other_apps">Connect to other apps</string>
    <string name="settings_other_apps_short">Other apps</string>
    <string name="settings_other_apps_google_fit">Google Fit</string>
    <string name="settings_other_apps_validic">Validic</string>
    <string name="settings_login">Log in</string>
    <string name="analysis_fragment_title_string">Analysis</string>
</resources>